feature: [172] Enable native build with GraalVM